generated/checker-for-evaluation/generated/test-Memory-Leak-c8dafb0e4398dacc362832098a04b97da3b0395b/build_logs/0/build_error_log2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreStmt(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:113:88: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, bool> >::data_type’ {aka ‘llvm::ImmutableMap<const clang::ento::MemRegion*, bool>’} to ‘const llvm::ImmutableMap<const clang::ento::MemRegion*, bool>*’ in initialization
  113 |   const llvm::ImmutableMap<const MemRegion*, bool> *LeakMap = State->get<ReqCleanupMap>();
      |                                                               ~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                                                        |
      |                                                                                        clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, bool> >::data_type {aka llvm::ImmutableMap<const clang::ento::MemRegion*, bool>}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
